--- a/src/template/index.ejs
+++ b/src/template/index.ejs
@@ -15,7 +15,7 @@
           <div class="main">
             <h1 id="test"></h1>
             <p>Enables source map support, postcss-loader will use the previous source map given by other loaders and update it accordingly, if no previous loader is applied before postcss-loader, the loader will generate a source map for you.</p>
-            <div class="tab" data-js-hook="tab">
+            <div class="tab" data-js-hook="tab" data-js-tab="1">
               <ul class="tab__nav" data-js-hook="tab-nav">
                 <li class="tab__item"><span class="tab__item-text is_active" data-js-tab-nav="1">TAB A</span></li>
                 <li class="tab__item"><span class="tab__item-text" data-js-tab-nav="2">TAB B</span></li>
@@ -26,7 +26,7 @@
               <div class="tab__content" data-js-tab-content="3"></div>
             </div>
             <br>
-            <div class="tab" data-js-hook="tab">
+            <div class="tab" data-js-hook="tab" data-js-tab="2">
               <ul class="tab__nav" data-js-hook="tab-nav">
                 <li class="tab__item"><span class="tab__item-text is_active" data-js-tab-nav="1">TAB A</span></li>
                 <li class="tab__item"><span class="tab__item-text" data-js-tab-nav="2">TAB B</span></li>
