component / tab #5 enabled multiple tabs

--- a/src/template/index.ejs
+++ b/src/template/index.ejs
@@ -13,7 +13,7 @@
       <!-- content -->
         <div class="content">
           <div class="main">
-            <h1 id="test"></h1>
+            <h1 id="test">TEST</h1>
             <p>Enables source map support, postcss-loader will use the previous source map given by other loaders and update it accordingly, if no previous loader is applied before postcss-loader, the loader will generate a source map for you.</p>
             <div class="tab" data-js-hook="tab" data-js-tab="1">
               <ul class="tab__nav" data-js-hook="tab-nav">
