--- a/src/css/_components/_index.css
+++ b/src/css/_components/_index.css
@@ -1,14 +1,74 @@
-a, b {
-    color: red;
 
-    & c, & d {
-        color: white;
+// tooltip
+// ================================
+.tooltip {
+    $_this: &;
+    $_iconSize: 40px;
+    position: relative;
+    display: inline-block;
+    width: $_iconSize;
+    height: $_iconSize;
+    text-align: center;
+
+    &.-right {
+        #{$_this}__text {
+            right: $_iconSize / 2;
+            left: auto;
+            border-radius: 5px 5px 0px 5px;
+
+            &::before {
+                right: 0;
+                left: auto;
+                border-right: none;
+                border-left: 12px solid transparent;
+            }
+        }
+    }
+
+    svg {
+        height: $_iconSize;
+        width: $_iconSize;
+    }
+
+    &__text {
+        // visibility: hidden;
+        // opacity: 0;
+
+        position: absolute;
+        right: auto;
+        bottom: 100%;
+        left: $_iconSize / 2;
+        width: 400px;
+        margin-bottom: 7px;
+        padding: 8px 12px;
+        font-size: 1.1rem;
+        line-height: 1.4;
+        text-align: left;
+        color: #fff;
+        border-radius: 5px 5px 5px 0;
+        background-color: rgba(74, 74, 74, .9);
+
+        &::before {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            width: 0;
+            height: 0;
+            content: "";
+            border-top-width: 10px;
+            border-top-style: solid;
+            border-top-color: rgba(74, 74, 74, 0.9);
+            border-right: 12px solid transparent;
+        }
     }
 }
 
+
+// tab
+// ================================
 .tab {
-    width: 100%;
     $_this: &;
+    width: 100%;
 
     &__nav {
         flex: 1 1 auto;
