--- a/src/css/_components/_index.css
+++ b/src/css/_components/_index.css
@@ -9,31 +9,26 @@
     width: $_iconSize;
     height: $_iconSize;
     text-align: center;
-
-    &.-right {
-        #{$_this}__text {
-            right: $_iconSize / 2;
-            left: auto;
-            border-radius: 5px 5px 0px 5px;
-
-            &::before {
-                right: 0;
-                left: auto;
-                border-right: none;
-                border-left: 12px solid transparent;
-            }
-        }
-    }
+    cursor: pointer;
 
     svg {
         height: $_iconSize;
         width: $_iconSize;
+        pointer-events: none; // ホバー範囲のバグっぽさ
+    }
+
+    &:hover {
+        svg g {
+            fill: black;
+        }
+
+        #{$_this}__text {
+            display: block;
+        }
     }
 
     &__text {
-        // visibility: hidden;
-        // opacity: 0;
-
+        display: none;
         position: absolute;
         right: auto;
         bottom: 100%;
@@ -59,6 +54,61 @@
             border-top-style: solid;
             border-top-color: rgba(74, 74, 74, 0.9);
             border-right: 12px solid transparent;
+        }
+
+        &.is_left {
+            right: $_iconSize / 2;
+            left: auto;
+            border-radius: 5px 5px 0px 5px;
+
+            &::before {
+                right: 0;
+                left: auto;
+                border-right: none;
+                border-left: 12px solid transparent;
+            }
+        }
+
+        &.is_centered {
+            right: auto;
+            left: -180px;
+            margin-left: auto;
+            margin-right: auto;
+            border-radius: 5px 5px 5px 5px;
+
+            &::before {
+                right: -100%;
+                left: -100%;
+                margin-left: auto;
+                margin-right: auto;
+                border-left: 8px solid transparent;
+                border-right: 8px solid transparent;
+            }
+        }
+
+        &.is_bottom {
+            bottom: auto;
+            top: 110%;
+            right: auto;
+            left: -180px;
+            margin-left: auto;
+            margin-right: auto;
+            border-radius: 5px 5px 5px 5px;
+
+            &::before {
+                top: auto;
+                bottom: 100%;
+                right: -100%;
+                left: -100%;
+                margin-left: auto;
+                margin-right: auto;
+                border-left: 8px solid transparent;
+                border-right: 8px solid transparent;
+                border-top: none;
+                border-bottom-width: 10px;
+                border-bottom-style: solid;
+                border-bottom-color: rgba(74, 74, 74, 0.9);
+            }
         }
     }
 }
