--- a/src/css/app.css
+++ b/src/css/app.css
@@ -31,6 +31,7 @@
 
     &.is_fixed {
         position: fixed;
+        z-index: 999;
         width: 100%;
         height: 70px;
         background: dodgerblue;
